# websocketQt

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
db/: DB
encrypt/: CMakeLists.txt  decrypthelper.cpp  encrypthelper.cpp
encrypt/tests/: encrypt_roundtrip.cpp
log/: CMakeLists.txt  Logger.cpp  logger.cpp  logger.h
websocketServer/: CMakeLists.txt  client.cpp  client.h  clienthub.cpp  clienthub.h  context.cpp  context.h  encrypthelper.cpp  encrypthelper.h  main.cpp  protocol.h  socket.cpp  socket.h
websocketclient/: CMakeLists.txt  decrypthelper.cpp  decrypthelper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  websocketclient.cpp  websocketclient.h
wss/: cert.pem  key.pem
