cmake_minimum_required(VERSION 3.5)

project(WebSocketClientQt LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
option(USE_WSS "Enable WSS (WebSocket Secure)" OFF)
option(USE_LOG "Enable Logging" ON)
if(USE_WSS)
    add_definitions(-DUSE_WSS)
    message(STATUS "WSS (WebSocket Secure) is ENABLED")
else()
       message(STATUS "WSS (WebSocket Secure) is DISABLED")

endif()
add_subdirectory(websocketclient)
add_subdirectory(websocketServer)
add_subdirectory(encrypt)
if(USE_LOG)
     add_definitions(-DUSE_LOG)
     message(STATUS "Logging is ENABLED")
     add_subdirectory(log)
else()
        message(STATUS "Logging is DISABLED")
endif()
